methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:30: error: not found: value Direction
    setDirection(Direction.WEST)
                 ^